--- a/locales/en/categories.json
+++ b/locales/en/categories.json
@@ -8,23 +8,23 @@
   "respiratory-equipment_bipap": "Bipap",
   "respiratory-equipment_bipap-st": "Bipap St",
   "respiratory-equipment_chamber": "Chamber",
-  "respiratory-equipment_cough-assist-device": "Cough Assist Devices",
+  "respiratory-equipment_cough-assist-devices": "Cough Assist Devices",
   "respiratory-equipment_cpap": "Cpap",
   "respiratory-equipment_nebulizer": "Nebulizer",
   "respiratory-equipment_oxygen-concentrator": "Oxygen Concentrator",
   "respiratory-equipment_oxygen-cylinder": "Oxygen Cylinder",
   "respiratory-equipment_oxygen-therapy-device": "Oxygen Therapy Device (Manometer)",
   "respiratory-equipment_peak-flow-meter": "Peak Flow Meter (Pef Meter)",
-  "respiratory-equipment_pep&imt": "Pep & Imt",
-  "respiratory-equipment_portable_oxygen-concentrator": "Portable Oxygen Concentrator",
+  "respiratory-equipment_pep-imt": "Pep & Imt",
+  "respiratory-equipment_portable-oxygen-concentrator": "Portable Oxygen Concentrator",
   "respiratory-equipment_pulse-oximeter": "Pulse Oximeter",
   "respiratory-equipment_tracheostomy-cannula": "Tracheostomy Cannula",
   "respiratory-equipment_triflo": "Triflo",
   "respiratory-equipment_ventilator": "Ventilator",
 
   "respiratory-devices-masks": "Respiratory Devices Masks",
-  "respiratory-masks_nasal-mask": "Nasal Mask",
-  "respiratory-masks_oral-nasal-mask": "Oral Nasal Mask",
+  "respiratory-devices-masks_nasal-mask": "Nasal Mask",
+  "respiratory-devices-masks_oral-nasal-mask": "Oral Nasal Mask",
 
   "diapers": "Diapers and Other Care Products",
   "diapers_anatomical-gland": "Anatomical Gland",
