--- a/locales/mk/categories.json
+++ b/locales/mk/categories.json
@@ -8,22 +8,22 @@
   "respiratory-equipment_bipap": "Бипап",
   "respiratory-equipment_bipap-st": "Бипап Св",
   "respiratory-equipment_chamber": "Комора",
-  "respiratory-equipment_cough-assist-device": "Уреди за помош при кашлица",
+  "respiratory-equipment_cough-assist-devices": "Уреди за помош при кашлица",
   "respiratory-equipment_cpap": "Cpap",
   "respiratory-equipment_nebulizer": "Небулизатор",
   "respiratory-equipment_oxygen-concentrator": "Концентратор на кислород",
   "respiratory-equipment_oxygen-cylinder": "Цилиндар со кислород",
   "respiratory-equipment_oxygen-therapy-device": "Уред за кислородна терапија (манометар)",
   "respiratory-equipment_peak-flow-meter": "Мерач на врвен проток (Пеф мерач)",
-  "respiratory-equipment_pep&imt": "Pep & Imt",
-  "respiratory-equipment_portable_oxygen-concentrator": "Пренослив кислороден концентратор",
+  "respiratory-equipment_pep-imt": "Pep & Imt",
+  "respiratory-equipment_portable-oxygen-concentrator": "Пренослив кислороден концентратор",
   "respiratory-equipment_pulse-oximeter": "Пулсен оксиметар",
   "respiratory-equipment_tracheostomy-cannula": "Трахеостомска канила",
   "respiratory-equipment_triflo": "Трифло",
   "respiratory-equipment_ventilator": "Вентилатор",
   "respiratory-devices-masks": "Маски за респираторни уреди",
-  "respiratory-masks_nasal-mask": "Назална маска",
-  "respiratory-masks_oral-nasal-mask": "Орална назална маска",
+  "respiratory-devices-masks_nasal-mask": "Назална маска",
+  "respiratory-devices-masks_oral-nasal-mask": "Орална назална маска",
   "diapers": "Пелени и други производи за нега",
   "diapers_anatomical-gland": "Анатомска жлезда",
   "diapers_barrier-cream": "Бариерен крем",
