--- a/locales/mk/sleepDisorders.json
+++ b/locales/mk/sleepDisorders.json
@@ -45,7 +45,7 @@
       "p2": "Динамиките што доведуваат до Комплексна Sleep Апнеа сè уште не се целосно познати."
     }
   },
-  "diseases-associated-with-apnea": {
+  "dawa": {
     "heartDisease": {
       "title": "Срцеви Болести и Спиење Апнеа",
       "subtitle1": "Важноста на Спиење Апнеа во Лечењето и Пратната Контрола на Срцевите Болести",
