--- a/locales/sq/categories.json
+++ b/locales/sq/categories.json
@@ -8,22 +8,22 @@
   "respiratory-equipment_bipap": "Bipap",
   "respiratory-equipment_bipap-st": "Bipap St",
   "respiratory-equipment_chamber": "Dhoma",
-  "respiratory-equipment_cough-assist-device": "Pajisjet për të ndihmuar kollën",
+  "respiratory-equipment_cough-assist-devices": "Pajisjet për të ndihmuar kollën",
   "respiratory-equipment_cpap": "Cpap",
   "respiratory-equipment_nebulizer": "Nebulizator",
   "respiratory-equipment_oxygen-concentrator": "Përqendruesi i oksigjenit",
   "respiratory-equipment_oxygen-cylinder": "Cilindri i oksigjenit",
   "respiratory-equipment_oxygen-therapy-device": "Pajisja e terapisë me oksigjen (manometër)",
   "respiratory-equipment_peak-flow-meter": "Matësi i rrjedhës së pikut (metër Pef)",
-  "respiratory-equipment_pep&imt": "Pep & Imt",
-  "respiratory-equipment_portable_oxygen-concentrator": "Koncentrator portativ i oksigjenit",
+  "respiratory-equipment_pep-imt": "Pep & Imt",
+  "respiratory-equipment_portable-oxygen-concentrator": "Koncentrator portativ i oksigjenit",
   "respiratory-equipment_pulse-oximeter": "Oksimetri i pulsit",
   "respiratory-equipment_tracheostomy-cannula": "Kanula e trakeostomisë",
   "respiratory-equipment_triflo": "Triflo",
   "respiratory-equipment_ventilator": "Ventilator",
   "respiratory-devices-masks": "Maska për aparatet e frymëmarrjes",
-  "respiratory-masks_nasal-mask": "Maska e hundës",
-  "respiratory-masks_oral-nasal-mask": "Maska e hundës për gojë",
+  "respiratory-devices-masks_nasal-mask": "Maska e hundës",
+  "respiratory-devices-masks_oral-nasal-mask": "Maska e hundës për gojë",
   "diapers": "Pelena dhe produkte të tjera të kujdesit",
   "diapers_anatomical-gland": "Gjëndra anatomike",
   "diapers_barrier-cream": "Krem pengues",
