--- a/locales/sq/sleepDisorders.json
+++ b/locales/sq/sleepDisorders.json
@@ -45,7 +45,7 @@
       "p2": "Dinamikat që çojnë në Apnea Kompleks nuk janë ende të njohura plotësisht."
     }
   },
-  "diseases-associated-with-apnea": {
+  "dawa": {
     "heartDisease": {
       "title": "Sëmundja e Zemrës dhe Apnea e Gjumit",
       "subtitle1": "Rëndësia e Apnees së Gjumit në Trajtimin dhe Ndjekjen e Sëmundjeve të Zemrës",
