--- a/locales/mk/navbar.json
+++ b/locales/mk/navbar.json
@@ -1,14 +1,17 @@
 {
-    "contact": "Контакт",
-    "diseases": "Болести",
-    "home": "Дома",
-    "institutional": "Институционален",
-    "products": "Производи",
-    "search": "Пребарајте производ...",
-    "dealerships": "Франшизи",
-    "company-profile": "Профил на компанијата",
-   "inst-p1": "Метса Хелт беше основана на 09.09.2009 година во Кајсери, еден од најважните центри за живеење во Туркије, за да обезбеди пациентите да имаат пристап до најдобрите производи под правилни услови. Нашата компанија, која доби прифаќање за кратко време во трговскиот живот без да ги компромитира своите основни принципи, стана локален официјален овластен дистрибутер на многу водечки национални и меѓународни компании во својот сектор. Оваа ситуација и овозможи на компанијата и на нејзините вработени да се сретнат со иновативни производи, со што се обезбедува најточен третман и поддржувачки производи за пациентите.",
+  "slogan": "Сè за вашето здравје",
+  "contact": "Контакт",
+  "diseases": "Болести",
+  "home": "Дома",
+  "institutional": "Институционален",
+  "products": "Производи",
+  "search": "Пребарајте производ...",
+  "dealerships": "Франшизи",
+  "company-profile": "Профил на компанијата",
+  "inst-p1": "Метса Хелт беше основана на 09.09.2009 година во Кајсери, еден од најважните центри за живеење во Туркије, за да обезбеди пациентите да имаат пристап до најдобрите производи под правилни услови. Нашата компанија, која доби прифаќање за кратко време во трговскиот живот без да ги компромитира своите основни принципи, стана локален официјален овластен дистрибутер на многу водечки национални и меѓународни компании во својот сектор. Оваа ситуација и овозможи на компанијата и на нејзините вработени да се сретнат со иновативни производи, со што се обезбедува најточен третман и поддржувачки производи за пациентите.",
   "inst-p2": "Најважните чекори за време на закрепнувањето од утврдените болести и проблеми се ефикасната дијагноза и процесот на третман. Додека на нашите пациенти им нудиме материјали од прва класа, комбинирани со поддршка по продажбата, го обезбедуваме ова со нашите чесни, сигурни, трудољубиви, динамични, ориентирани кон клиентите и насмеани вработени. Оваа работа ни носи одржливо задоволство на клиентите и ни овозможува да бидеме компанија со висока свесност, ефективност, ефикасност и продуктивност.",
   "inst-p3": "Заедно со водечките компании-дилери во секторот, посветено работиме за да обезбедиме најефикасна услуга, учејќи и обновувајќи се секој ден, давајќи приоритет на доблестите на чесноста, трудољубивоста и сигурноста. Нашата цел е секогаш да ги обезбедиме најиновативните производи со максимална корист, да ги доставиме најточните производи до нашите клиенти и да се движиме напред со сигурни чекори. Нашата компанија работи во согласност со Фондот за социјално осигурување.",
-  "inst-p4": "Нашите клиенти можат целосно да имаат корист од поддршката обезбедена од Фондот за социјално осигурување за пациенти. Можете да не контактирате преку информациите за контакт за да добиете повеќе детали за нашите производи и брендови."
-  }
+  "inst-p4": "Нашите клиенти можат целосно да имаат корист од поддршката обезбедена од Фондот за социјално осигурување за пациенти. Можете да не контактирате преку информациите за контакт за да добиете повеќе детали за нашите производи и брендови.",
+  "results": "Резултати од пребарувањето за ",
+  "not-found": "Нема пронајдено производи за избраните критериуми."
+}
