--- a/locales/en/home.json
+++ b/locales/en/home.json
@@ -1,1 +1,19 @@
-{"banner_devices":"Devices","banner_lymphedema":"Lymphedema","banner_medical":"Medical Products","banner_orthopedic":"Orthopedic","banner_products":"Products","banner_respiratory":"Respiratory","carousel_brand":"Brands","carousel_detail":"View Details","carousel_header":"Featured Products","groups_contact":"Contact Us","groups_email":"Enter your email","groups_header":"Product Groups","groups_message":"Enter your message","groups_name":"Enter your full name","groups_phone":"Enter your phone number","groups_submit":"Send Message"}
+{
+  "banner_devices": "Devices",
+  "banner_lymphedema": "Lymphedema",
+  "banner_medical": "Medical Products",
+  "banner_orthopedic": "Orthopedic",
+  "banner_products": "Products",
+  "banner_respiratory": "Respiratory",
+  "carousel_brand": "Brands",
+  "carousel_detail": "View Details",
+  "carousel_header": "Featured Products",
+  "groups_contact": "Contact Us",
+  "groups_email": "Enter your email",
+  "groups_header": "Product Groups",
+  "groups_message": "Enter your message",
+  "groups_name": "Enter your full name",
+  "groups_phone": "Enter your phone number",
+  "groups_submit": "Send Message",
+  "groups_subject": "Subject"
+}
